# futures-retry-policies

./: Cargo.toml  README.md
compat/: Cargo.toml
compat/src/: futures_retry.rs  lib.rs  retry_policies.rs  sync.rs  tokio.rs  tracing.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
src/: futures_retry.rs  iter.rs  lib.rs  retry_policies.rs  sync.rs  tokio.rs  tracing.rs
