[package]
name = "futures-retry-policies"
version = "0.2.1"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
description = "Retriable Futures"
repository = "https://github.com/conradludgate/futures-retry-policies"
license = "MIT OR Apache-2.0"
keywords = ["async", "futures", "retry", "policy", "backoff"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1"

tokio = { version = "1", optional = true, features = ["time"] }

retry-policies = { version = "0.1.1", optional = true }
chrono = { version = "0.4", optional = true }

tracing = { version = "0.1", optional = true }

retry = { version = "1", optional = true }

futures-retry = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
retry = "1.3.1"

[features]
default = ["retry-policies", "tokio", "tracing"]
retry-policies = ["dep:retry-policies", "chrono"]
retry-crate = ["retry"]

# Properly document all features on docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
