[package]
name = "futures-retry-policies-core"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
description = "Retryable Futures"
repository = "https://github.com/conradludgate/futures-retry-policies"
license = "MIT OR Apache-2.0"
keywords = ["async", "futures", "retry", "policy", "backoff"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
